syntax = "proto3";

option csharp_namespace = "Rs.Net.Core.MyGRPC";

import "model.proto";

package download;

service Downloader{
	// 
	rpc DownloadFile(FileId) returns (stream FileStream);
}